--- a/src/app/modules/user/world-list/components/show-world/show-world.component.html
+++ b/src/app/modules/user/world-list/components/show-world/show-world.component.html
@@ -23,6 +23,9 @@
         </h2>
       </ng-template>
         <p>
+          <span class="font-bold">Código: </span>{{(world?.code | uppercase) || "-"}}
+        </p>
+        <p>
           <span class="font-bold">Sistema: </span>{{(world?.system | titlecase) || "-"}}
         </p>
         <p>
