--- a/src/app/modules/tabletop/tabletop/tabletop.component.css
+++ b/src/app/modules/tabletop/tabletop/tabletop.component.css
@@ -1,32 +1,55 @@
 .screen {
-    width: 100vw;
-    height: 100vh;
-    background-color: black;
-    position: relative;
+  width: 100vw;
+  height: 100vh;
+  background-color: #c9c9c9;
+  position: relative;
 }
 
 .chat {
-    width: 100%;
-    overflow-y: auto;
-    padding: 12px;
-    flex: 1 0;
-    border-top-right-radius: 8px;
-    border-bottom-right-radius: 8px;
+  width: 100%;
+  overflow-y: auto;
+  padding: 12px;
+  flex: 1 0;
+  border-top-right-radius: 8px;
+  border-bottom-right-radius: 8px;
+}
+
+.aside-chat {
+  background-color: white;
+  z-index: 10;
+  position: absolute;
+  transition-duration: 200ms;
+  border-top-right-radius: 0.5rem;
+  border-bottom-right-radius: 0.5rem;
 }
 
 .message {
-    margin: 16px 0;
-    padding: 8px 16px;
-    background-color: rgb(58, 126, 203);
-    border-radius: 12px;
-    border-top-left-radius: 0;
-    width: 65%;
+  margin: 16px 0;
+  padding: 8px 16px;
+  background-color: rgb(27, 78, 136);
+  border-radius: 12px;
+  border-top-left-radius: 0;
+  width: 65%;
 }
 
-.my-message{
-    margin-left: auto;
-    background-color: rgb(27, 78, 136);
-    border-radius: 12px !important;
-    border-top-right-radius: 0 !important;
+.my-message {
+  margin-left: auto;
+  background-color: rgb(58, 126, 203);
+  border-radius: 12px !important;
+  border-top-right-radius: 0 !important;
 }
- 
+
+.aside-tools {
+    height: 100vh;
+    position: absolute;
+    right: 0;
+}
+
+.tools {
+    background-color: white;
+    border-radius: 6px;
+    padding: 4px;
+    display: flex;
+    flex-wrap: wrap;
+    flex-direction: row;
+}
