--- a/src/app/modules/user/my-worlds/my-worlds.component.html
+++ b/src/app/modules/user/my-worlds/my-worlds.component.html
@@ -14,7 +14,7 @@
           (refreshEvent)="listWorld()"
         />
       </div>
-      @if(worlds.length){
+      @if(worlds.length > 0 && !loadingWorlds){
         <article>
           <p-table [value]="worlds" [tableStyle]="{ 'min-width': '50rem' }" [rowHover]="true"
           [rows]="10" [paginator]="true">
@@ -45,8 +45,13 @@
         </p-table>
         </article>
       }
-      @else{
+      @else if(worlds.length == 0 && !loadingWorlds){
         <h3 class="text-xl">Nenhum mundo criado até o momento...</h3>
+      }
+      @else {
+        <div class="flex justify-center">
+          <p-progress-spinner ariaLabel="loading" />
+        </div>
       }
     </section>
   </main>
