--- a/src/app/modules/user/world-list/world-list.component.html
+++ b/src/app/modules/user/world-list/world-list.component.html
@@ -23,7 +23,7 @@
         (refreshEvent)="listWorld()"
       />
     </div>
-    @if(worlds.length){
+    @if(worlds.length > 0 && !loadingWorlds){
       <article>
         <p-table [value]="worlds" [tableStyle]="{ 'min-width': '50rem' }" [rowHover]="true"
         [rows]="10" [paginator]="true">
@@ -54,8 +54,13 @@
       </p-table>
       </article>
     }
-    @else{
+    @else if(worlds.length == 0 && !loadingWorlds){
       <h3 class="text-xl">Nenhum mundo foi encontrado...</h3>
+    }
+    @else{
+      <div class="flex justify-center">
+        <p-progress-spinner ariaLabel="loading" />
+      </div>
     }
   </section>
 </main>
