fix: correção da rota de mundos e funcionamento da home do usuário

--- a/src/app/shared/components/navbar/navbar.component.html
+++ b/src/app/shared/components/navbar/navbar.component.html
@@ -7,7 +7,7 @@
     <div class="flex items-center w-1/2 justify-center">
       <ul class="flex gap-x-6">
         <li class="nav-link" routerLink="/home">Início</li>
-        <li class="nav-link" routerLink="/list">Mundos</li>
+        <li class="nav-link" routerLink="/mundos">Mundos</li>
         <li class="nav-link" routerLink="/tabletop/1">Features</li>
       </ul>
     </div>
