--- a/src/app/modules/user/home/home.component.html
+++ b/src/app/modules/user/home/home.component.html
@@ -5,12 +5,13 @@
       @if(user && !loadingUserData){
       <div class="flex flex-col md:flex-row items-center justify-between p-4">
         <div class="flex items-center mb-4 md:mb-0">
-          <p-avatar icon="pi pi-user" styleClass="mr-4" size="large"></p-avatar>
+          <img class="flex items-center justify-center mr-4 rounded-xl w-16 h-16" 
+          [src]="user.image" />
           <div>
             <h1 class="text-2xl font-bold">
               {{ greetingUser() + ", " + user.username }}!
             </h1>
-            <p class="text-gray-600">Online</p>
+            <p class="text-gray-600">Se divirta utilizando o QuickAttack!</p>
           </div>
         </div>
         <div class="flex gap-2">
