--- a/src/app/modules/tabletop/tabletop/tabletop.component.html
+++ b/src/app/modules/tabletop/tabletop/tabletop.component.html
@@ -91,7 +91,7 @@
   <aside class="aside-tools">
     <div class="tools">
       <button class="h-12 w-full" (click)="addToken('character')">
-        <i class="pi pi-user"></i>
+        <i class="pi pi-plus"></i>
       </button>
       <button class="h-12 w-full" (click)="addToken('monster')">
         <i class="pi pi-shield"></i>
