retirando adicionar token temporario

--- a/src/app/modules/tabletop/tabletop/tabletop.component.html
+++ b/src/app/modules/tabletop/tabletop/tabletop.component.html
@@ -90,10 +90,10 @@
   <!-- Right tools sidebar -->
   <aside class="aside-tools">
     <div class="tools">
-      <button class="h-12 w-full" (click)="addToken('character')">
+      <button class="h-12 w-full">
         <i class="pi pi-plus"></i>
       </button>
-      <button class="h-12 w-full" (click)="addToken('monster')">
+      <button class="h-12 w-full" >
         <i class="pi pi-shield"></i>
       </button>
       <button class="h-12 w-full">
