feat: adição de tokens personalizados ao tabuleiro

--- a/src/app/modules/tabletop/tabletop/tabletop.component.css
+++ b/src/app/modules/tabletop/tabletop/tabletop.component.css
@@ -93,7 +93,6 @@
   cursor: pointer;
 }
 
-/* Token styles */
 .token {
   position: absolute;
   width: 45px;
@@ -144,4 +143,8 @@
 }
 .info-message {
   background-color: #0055ff;
+}
+
+tr td, tr th{
+  text-align: left;
 }
