--- a/src/app/modules/tabletop/tabletop/tabletop.component.html
+++ b/src/app/modules/tabletop/tabletop/tabletop.component.html
@@ -50,15 +50,18 @@
   </aside>
 
   <div class="board-container">
-    <div class="grid-board" #gridBoard>
+    <div class="grid-board" #gridBoard (dragover)="onDragOver($event)" (drop)="dropToken($event)">
       @for (row of gridRows; track $index) {
       <div class="grid-row">
         @for (col of gridCols; track $index) {
         <div
           class="grid-cell"
+          (click)="selectToken()"
           [attr.data-row]="row"
           [attr.data-col]="col"
-        ></div>
+          (dragover)="onDragOver($event)"
+          (drop)="dropToken($event)">
+      </div>
         }
       </div>
       } @for (token of tokens; track token.id) {
@@ -67,9 +70,31 @@
         [ngClass]="token.type"
         [style.top.px]="token.position.y"
         [style.left.px]="token.position.x"
-        (mousedown)="startDragging($event, token)"
+        draggable="true"
+        (click)="selectToken(token)"
+        (dragstart)="startDragging($event, token)"
       >
         <img [src]="token.label || ''" [alt]="token.name" class="w-full h-full">
+        @if(this.selected_token == token){
+          <div 
+          class="absolute top-[-92px] flex justify-center flex-wrap">
+          <div class="flex justify-center w-full">
+            <button class="bg-white mx-1 rounded-full hover:bg-zinc-300 cursor-pointer">
+              <i class="pi pi-eye text-black p-2"></i>
+            </button>
+            @if(user.owner){
+              <button class="bg-white mx-1 rounded-full hover:bg-zinc-300 cursor-pointer"
+              (click)="deleteTokenFromBoard(token.id)">
+                <i class="pi pi-trash text-black p-2"></i>
+              </button>
+            }
+          </div>
+            <p class="m-0 text-center font-medium min-w-max mt-1">{{token.name}}</p>
+            <div class="bg-red-600 rounded-lg w-32">
+              <p class="text-center font-medium text-sm">{{token.stats.maxhp || 0}}/{{token.stats.hp || 0}}</p>
+            </div>
+          </div>
+        }
       </div>
       }
     </div>
@@ -86,9 +111,11 @@
       <button class="h-12 w-full">
         <i class="pi pi-sliders-v"></i>
       </button>
+      @if(user.owner){
       <button class="h-12 w-full" (click)="openTokenModal()">
         <i class="pi pi-book"></i>
       </button>
+    }
       <button (click)="exitWorld()" class="h-12 w-full">
         <i class="pi pi-sign-out"></i>
       </button>
