chore: enviar mensagem ao chat com enter

--- a/src/app/modules/tabletop/tabletop/tabletop.component.html
+++ b/src/app/modules/tabletop/tabletop/tabletop.component.html
@@ -40,6 +40,7 @@
           pInputText
           [(ngModel)]="msg"
           [ngModelOptions]="{ standalone: true }"
+          (keydown)="handleChatKeyDown($event)"
           placeholder="Digite sua mensagem..."
           maxlength="255"
         />
