fix: styles do token no tabletop

--- a/src/app/modules/tabletop/tabletop/tabletop.component.html
+++ b/src/app/modules/tabletop/tabletop/tabletop.component.html
@@ -84,13 +84,13 @@
         <img [src]="token.label || ''" [alt]="token.name" class="w-full h-full">
         @if(this.selected_token == token){
           <div 
-          class="absolute top-[-92px] flex justify-center flex-wrap">
+          class="absolute top-[-92px] flex justify-center flex-wrap z-10">
           <div class="flex justify-center w-full">
-            <button class="bg-white mx-1 rounded-full hover:bg-zinc-300 cursor-pointer">
+            <button class="bg-zinc-100 mx-1 rounded-full hover:bg-zinc-300 cursor-pointer">
               <i class="pi pi-eye text-black p-2"></i>
             </button>
             @if(user.owner){
-              <button class="bg-white mx-1 rounded-full hover:bg-zinc-300 cursor-pointer"
+              <button class="bg-zinc-100 mx-1 rounded-full hover:bg-zinc-300 cursor-pointer"
               (click)="deleteTokenFromBoard(token.id)">
                 <i class="pi pi-trash text-black p-2"></i>
               </button>
