--- a/src/app/modules/tabletop/tabletop/tabletop.component.css
+++ b/src/app/modules/tabletop/tabletop/tabletop.component.css
@@ -96,7 +96,7 @@
 
 .board-container {
   flex-grow: 1;
-  padding: 60px 20px 20px 60px;
+  padding: 60px;
   display: flex;
   justify-content: flex-start;
   align-items: flex-start;
@@ -166,7 +166,6 @@
   background-color: #2c2c2c;
   width: min-content;
   box-shadow: 0 4px 6px rgba(0, 0, 0, 0.1);
-  /* Fixed margin to ensure top rows are always visible */
   margin: 100px 50px 50px 100px;
   transform-origin: 50px 50px;
 }
