--- a/src/app/modules/tabletop/tabletop/tabletop.component.html
+++ b/src/app/modules/tabletop/tabletop/tabletop.component.html
@@ -50,6 +50,33 @@
     </section>
   </aside>
 
+  <div class="zoom-controls" [class.show]="showZoomControls">
+    <div class="zoom-slider">
+      <button class="zoom-btn" (click)="setZoom(zoomLevel - zoomStep)">
+        <i class="pi pi-minus"></i>
+      </button>
+      <p-slider
+        [(ngModel)]="zoomLevel"
+        [min]="minZoom"
+        [max]="maxZoom"
+        [step]="zoomStep"
+        [style]="{ width: '100px' }"
+      >
+      </p-slider>
+      <button class="zoom-btn" (click)="setZoom(zoomLevel + zoomStep)">
+        <i class="pi pi-plus"></i>
+      </button>
+      <button
+        class="zoom-reset"
+        (click)="resetZoom()"
+        pTooltip="Reset Zoom"
+        tooltipPosition="top"
+      >
+        <i class="pi pi-refresh"></i>
+      </button>
+    </div>
+  </div>
+
   <div class="board-container">
     <div
       class="grid-board"
@@ -123,27 +150,6 @@
       </div>
       }
     </div>
-    
-    <div class="zoom-controls" [class.show]="showZoomControls">
-      <div class="zoom-slider">
-        <button class="zoom-btn" (click)="setZoom(zoomLevel - zoomStep)">
-          <i class="pi pi-minus"></i>
-        </button>
-        <p-slider 
-          [(ngModel)]="zoomLevel" 
-          [min]="minZoom" 
-          [max]="maxZoom" 
-          [step]="zoomStep"
-          [style]="{'width': '100px'}">
-        </p-slider>
-        <button class="zoom-btn" (click)="setZoom(zoomLevel + zoomStep)">
-          <i class="pi pi-plus"></i>
-        </button>
-        <button class="zoom-reset" (click)="resetZoom()" pTooltip="Reset Zoom" tooltipPosition="top">
-          <i class="pi pi-refresh"></i>
-        </button>
-      </div>
-    </div>
   </div>
 
   <aside class="aside-tools">
@@ -151,20 +157,22 @@
       <button class="h-12 w-full">
         <i class="pi pi-plus"></i>
       </button>
-      <button class="h-12 w-full">
-        <i class="pi pi-shield"></i>
-      </button>
-      <button class="h-12 w-full">
-        <i class="pi pi-sliders-v"></i>
-      </button>
-      <button class="h-12 w-full" (click)="toggleZoomControls()" pTooltip="Zoom Controls" tooltipPosition="left">
+      <button
+        class="h-12 w-full"
+        (click)="toggleZoomControls()"
+        pTooltip="Zoom Controls"
+        tooltipPosition="left"
+      >
         <i class="pi pi-search"></i>
       </button>
       @if(user.owner){
-      <button class="h-12 w-full" (click)="openTokenModal()">
+      <button class="h-12 w-full" (click)="openTabletopConfigModal()">
         <i class="pi pi-book"></i>
       </button>
       }
+      <button (click)="openConfigModal()" class="h-12 w-full">
+        <i class="pi pi-cog"></i>
+      </button>
       <button (click)="exitWorld()" class="h-12 w-full">
         <i class="pi pi-sign-out"></i>
       </button>
@@ -172,299 +180,15 @@
   </aside>
 </div>
 
-<p-dialog
-  [(visible)]="showTokenModal"
-  [style]="{ width: '50vw' }"
-  [modal]="true"
-  header="Tabuleiro"
->
-  <p-tabView (onChange)="onTabChange($event)">
-    <p-tabPanel header="Tokens">
-      <div class="flex justify-end mb-4">
-        <p-button
-          label="Novo Token"
-          icon="pi pi-plus"
-          (click)="openNewTokenModal()"
-        ></p-button>
-      </div>
 
-      <p-table class="w-full" [value]="tokenList">
-        <ng-template pTemplate="header">
-          <tr>
-            <th>Imagem</th>
-            <th>Nome</th>
-            <th>Jogadores</th>
-            <th>Ações</th>
-          </tr>
-        </ng-template>
-        <ng-template pTemplate="body" let-token>
-          <tr>
-            <td class="text-center">
-              <img [src]="token.image" class="w-12 h-12" alt="token image" />
-            </td>
-            <td>{{ token.name }}</td>
-            <td>
-              @if(token.players.length <= 0){
-              <p class="text-zinc-500 text-center w-full">Nenhum jogador atribuído...</p>
-              } @else { @for (player of token.players; track $index) {
-              <span>{{ player.username }}; </span>
-              } }
-            </td>
-            <td class="text-center">
-              <button
-                pButton
-                icon="pi pi-users"
-                class="p-button-text"
-                (click)="openPlayersList(token)"
-                pTooltip="Gerenciar Jogadores"
-                tooltipPosition="top"
-              ></button>
-              <button
-                pButton
-                icon="pi pi-plus"
-                class="p-button-text"
-                (click)="addToken(token)"
-                pTooltip="Inserir no Tabuleiro"
-                tooltipPosition="top"
-              ></button>
-              <button
-                pButton
-                icon="pi pi-pencil"
-                class="p-button-text"
-                (click)="editToken(token)"
-                pTooltip="Editar Token"
-                tooltipPosition="top"
-              ></button>
-              <button
-                pButton
-                icon="pi pi-trash"
-                class="p-button-text p-button-danger"
-                (click)="deleteToken(token.id)"
-                pTooltip="Deletar Token"
-                tooltipPosition="top"
-              ></button>
-            </td>
-          </tr>
-        </ng-template>
-      </p-table>
-    </p-tabPanel>
-    <p-tabPanel header="Backgrounds">
-      <div class="flex flex-col gap-4">
-        <div class="flex justify-between items-center">
-          <h3>Background Atual</h3>
-          <p-button
-            icon="pi pi-trash"
-            severity="danger"
-            (click)="removeBackground()"
-            [disabled]="!currentBackground"
-          ></p-button>
-        </div>
+@if(showTabletopConfigModal()){
+  <app-tabletop-config [(visible)]="showTabletopConfigModal" [server]="server" [cellSize]="cellSize" [world_id]="world_id"
+  [currentBackground]="currentBackground"/>
+}
 
-        <div
-          class="bg-zinc-100 rounded-lg p-4 flex justify-center items-center"
-          style="min-height: 200px"
-        >
-          <img
-            [src]="currentBackground || ''"
-            class="max-h-48 object-contain"
-          />
-          @if(!currentBackground){
-          <p class="text-zinc-400">Nenhum background definido</p>
-          }
-        </div>
-
-        <div class="flex flex-col gap-2">
-          <p-fileUpload
-            mode="basic"
-            chooseLabel="Escolher Background"
-            [auto]="true"
-            accept="image/*"
-            (onSelect)="onBackgroundSelect($event)"
-            [maxFileSize]="1048576"
-          ></p-fileUpload>
-          <small class="text-zinc-500">*Tamanho máximo: 1MB</small>
-        </div>
-
-        <div class="mt-4">
-          <h3 class="mb-2">Histórico de Backgrounds</h3>
-          <p-table
-            [value]="backgroundHistory"
-            [scrollable]="true"
-            scrollHeight="200px"
-          >
-            <ng-template pTemplate="header">
-              <tr>
-                <th>Preview</th>
-                <th>Nome</th>
-                <th>Data</th>
-                <th>Ações</th>
-              </tr>
-            </ng-template>
-            <ng-template pTemplate="body" let-bg>
-              <tr>
-                <td style="width: 100px">
-                  <img [src]="bg.url" class="w-16 h-16 object-cover rounded" />
-                </td>
-                <td>{{ bg.name }}</td>
-                <td>{{ bg.addedAt | date : "dd/MM/yyyy HH:mm" }}</td>
-                <td>
-                  <button
-                    pButton
-                    icon="pi pi-image"
-                    class="p-button-text"
-                    (click)="useBackgroundFromHistory(bg.url)"
-                    pTooltip="Usar como Background"
-                    tooltipPosition="top"
-                  ></button>
-                </td>
-              </tr>
-            </ng-template>
-            <ng-template pTemplate="emptymessage">
-              <tr>
-                <td colspan="3" class="text-center p-4">
-                  Nenhum background no histórico
-                </td>
-              </tr>
-            </ng-template>
-          </p-table>
-        </div>
-      </div>
-    </p-tabPanel>
-  </p-tabView>
-</p-dialog>
-
-<p-dialog
-  [(visible)]="showPlayersListModal"
-  [style]="{ width: '50vw' }"
-  [modal]="true"
-  header="Gerenciar Jogadores do Token"
-  [style]="{ width: '50vw' }"
->
-  <div class="flex items-center gap-2 mb-4">
-    <p-dropdown
-      [options]="availablePlayers"
-      [(ngModel)]="selectedPlayer"
-      optionLabel="username"
-      placeholder="Selecione um jogador"
-      [style]="{ width: '250px' }"
-      [ngModelOptions]="{ standalone: true }"
-    ></p-dropdown>
-    <p-button
-      label="Adicionar"
-      icon="pi pi-plus"
-      (click)="addPlayerToToken(selectedPlayer, editingToken)"
-      [disabled]="!selectedPlayer"
-    ></p-button>
-  </div>
-  <hr class="mb-4">
-  @if(tokenPlayers.length <= 0){
-  <p class="text-center">Nenhum jogador adicionado ao token</p>
-  } @if(tokenPlayers.length >= 1){
-  <p-table [value]="tokenPlayers" [scrollable]="true" scrollHeight="200px">
-    <ng-template pTemplate="header">
-      <tr>
-        <th>Nome</th>
-        <th>Ações</th>
-      </tr>
-    </ng-template>
-    <ng-template pTemplate="body" let-player>
-      <tr>
-        <td>{{ player.username }}</td>
-        <td>
-          <button
-            pButton
-            icon="pi pi-trash"
-            class="p-button-text"
-            (click)="removePlayerFromToken(player, editingToken)"
-            pTooltip="Remover Jogador do Token"
-            tooltipPosition="top"
-          ></button>
-        </td>
-      </tr>
-    </ng-template>
-  </p-table>
-  }
-</p-dialog>
-
-<p-dialog
-  [(visible)]="showNewTokenModal"
-  [style]="{ width: '50vw' }"
-  [modal]="true"
-  header="Novo Token"
->
-  <form [formGroup]="tokenForm" (ngSubmit)="saveToken()">
-    <div class="mb-2">
-      <div class="flex flex-col gap-2">
-        <app-label name="name" description="Nome" [required]="true" />
-        <input
-          pInputText
-          id="name"
-          formControlName="name"
-          [ngClass]="
-            tokenForm.controls['name'].valid ? '' : 'ng-invalid ng-dirty'
-          "
-        />
-        @if(!tokenForm.controls['name'].valid &&
-        tokenForm.controls['name'].dirty){
-        <p class="text-red-500">Campo Obrigatório</p>
-        }
-      </div>
-    </div>
-
-    <div class="my-4">
-      <div class="flex flex-col gap-2">
-        <app-label name="type" description="Tipo" [required]="true" />
-        <p-dropdown
-          [options]="tokenTypes"
-          formControlName="type"
-          optionLabel="label"
-          optionValue="value"
-          placeholder="Selecione o tipo"
-          [style]="{ width: '100%' }"
-        ></p-dropdown>
-      </div>
-    </div>
-
-    <div class="my-4">
-      <div class="flex flex-col gap-2 mb-3">
-        <app-label name="image" description="Imagem" [required]="true" />
-        <div class="flex justify-evenly items-center">
-          <img
-            [src]="selectedImage || ''"
-            class="bg-zinc-300 w-24 h-24 rounded-full object-cover"
-          />
-          <p-fileUpload
-            mode="basic"
-            chooseLabel="Escolher Imagem"
-            [auto]="true"
-            accept="image/*"
-            (onSelect)="onImageSelect($event)"
-            [maxFileSize]="1048576"
-          ></p-fileUpload>
-        </div>
-      </div>
-    </div>
-
-    <div class="flex justify-end gap-2">
-      <p-button
-        label="Cancelar"
-        severity="secondary"
-        (click)="closeNewTokenModal()"
-      />
-      <p-button
-        *ngIf="!editingToken"
-        label="Criar"
-        (click)="saveToken()"
-        [disabled]="!this.tokenForm.valid"
-      />
-      <p-button
-        *ngIf="editingToken"
-        label="Atualizar"
-        (click)="updateToken()"
-        [disabled]="!this.tokenForm.valid"
-      />
-    </div>
-  </form>
-</p-dialog>
+@if(showConfigModal()){
+  <app-config [(visible)]="showConfigModal" [world_id]="world_id"
+  [server]="server" [owner]="user.owner"/>
+}
 
 <p-toast />
